--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,3 @@
-
 /* custom styles for navbar  */
 
 :hover.custom-underline::after {
@@ -47,7 +46,7 @@
 /* .custom-box-shadow{
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.05);
 } */
- .nav-links {
+.nav-links {
   display: flex;
   align-items: center;
   gap: 13rem;
@@ -58,8 +57,6 @@
   display: none;
 }
 @media only screen and (max-width: 992px) {
-
-
   .hidden {
     display: none;
   }
@@ -85,7 +82,6 @@
     flex-direction: column;
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     gap: 5rem;
-  
   }
 
   .nav-links.active {
@@ -101,21 +97,60 @@
     color: gray;
   }
 
-
   .custom-underline-active::after {
     margin-left: 22.2px;
-  
   }
 
   .position {
-
     top: -40px;
     right: 40px;
   }
 }
 
+/* testimonials */
+.testimonial-custom {
+  border-radius: 16px 16px 0 0 ;
+  border: 1px solid #267a95;
+  background: #fff;
+  height: 222px;
+  width: 257px;
+}
 
 
+/* slider */
+.swiper-pagination {
+  position: relative !important;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.swiper-pagination-bullet {
+  width: 8px;
+  height: 8px;
+  background: #d9d9d9; /* light gray for inactive */
+  opacity: 1;
+  margin: 0 6px;
+  border-radius: 9999px; /* fully rounded */
+  transition: all 0.3s ease;
+}
+
+.swiper-pagination-bullet-active {
+  width: 16px;
+  background: #267A95; /* your theme blue */
+}
 
 
+/* facilities */
 
+.facilities-shadow{
+box-shadow: 2px 10px 28px 0px #21787D4D;
+border: 1px solid #267A95
+}
+
+/* choose us  */
+.chooseus-bg{
+background: linear-gradient(to bottom right, #E5F5F7, #E8F7E5);
+}
+.chooseus-border{
+  border: 1px solid #8FDCE4
+}
