--- a/src/global.css
+++ b/src/global.css
@@ -1,42 +1,16 @@
 /* custom styles for navbar  */
 
-:hover.custom-underline::after {
-  content: "";
-  display: block;
-  border-bottom: 2px solid #267a95; /* Adjust the height and color as needed */
-  width: 42px;
-  margin-top: -2px;
-  margin-left: 2.2px;
-}
-
-:hover.custom-underline2::after {
-  width: 75px;
-}
-
-:hover.custom-underline3::after {
-  width: 65px;
-}
-
-:hover.custom-underline4::after {
-  width: 90px;
-}
-
-/* :active.custom-underline::after {
-    content: '';
-    display: block;
-    border-bottom: 2px solid #267A95; 
-    width: 42px; 
-    margin-top: -2px; 
-    margin-left: 2.2px;
-  } */
-
 .custom-underline-active::after {
   content: "";
   display: block;
   border-bottom: 2px solid #267a95; /* Adjust the height and color as needed */
-  width: 42px;
+  width: 70%;
   margin-top: -2px;
-  margin-left: 2.2px;
+  margin-left: 0.5px;
+}
+
+.notactive.custom::after {
+  display: hidden;
 }
 
 .custom-box-shadow {
@@ -46,6 +20,7 @@
 /* .custom-box-shadow{
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.05);
 } */
+
 .nav-links {
   display: flex;
   align-items: center;
@@ -56,6 +31,91 @@
 .hidden {
   display: none;
 }
+
+
+/* testimonials */
+.testimonial-custom {
+  border-radius: 16px 16px 0 0;
+  border: 1px solid #267a95;
+  background: #fff;
+  height: 222px;
+  width: 248px;
+}
+
+/* slider */
+.swiper-pagination {
+  position: relative !important;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.swiper-pagination-bullet {
+  width: 8px;
+  height: 8px;
+  background: #d9d9d9; /* light gray for inactive */
+  opacity: 1;
+  margin: 0 6px;
+  border-radius: 9999px; /* fully rounded */
+  transition: all 0.3s ease;
+}
+
+.swiper-pagination-bullet-active {
+  width: 16px;
+  background: #267a95; /* your theme blue */
+}
+
+/* facilities */
+
+.facilities-shadow {
+  box-shadow: 2px 10px 28px 0px #21787d4d;
+  border: 1px solid #267a95;
+}
+.radius-shadow {
+  border-radius: 24px 24px 0px 0px;
+  background: #feffff;
+  box-shadow: 1px 5px 14px 0px rgba(38, 122, 149, 0.1);
+}
+.facilities-position {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -46px;
+}
+
+/* choose us  */
+.chooseus-bg {
+  background: linear-gradient(to bottom right, #e5f5f7, #e8f7e5);
+}
+.chooseus-border {
+  border: 1px solid #8fdce4;
+}
+
+/* hero */
+.bg-hero-background {
+  background: url("assets/base1.png") no-repeat;
+background-size: cover;
+}
+
+/* featured card */
+.featured-container {
+  border-radius: 16px 16px 0px 0px;
+  border: 1px solid var(--primary-50, #8fdce4);
+  background: #fff;
+  box-shadow: 2px 10px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 992px) {
   .hidden {
     display: none;
@@ -105,52 +165,11 @@
     top: -40px;
     right: 40px;
   }
-}
 
-/* testimonials */
-.testimonial-custom {
-  border-radius: 16px 16px 0 0 ;
-  border: 1px solid #267a95;
-  background: #fff;
-  height: 222px;
-  width: 257px;
-}
-
-
-/* slider */
-.swiper-pagination {
-  position: relative !important;
-  margin-top: 20px;
-  text-align: center;
-}
-
-.swiper-pagination-bullet {
-  width: 8px;
-  height: 8px;
-  background: #d9d9d9; /* light gray for inactive */
-  opacity: 1;
-  margin: 0 6px;
-  border-radius: 9999px; /* fully rounded */
-  transition: all 0.3s ease;
-}
-
-.swiper-pagination-bullet-active {
-  width: 16px;
-  background: #267A95; /* your theme blue */
-}
-
-
-/* facilities */
-
-.facilities-shadow{
-box-shadow: 2px 10px 28px 0px #21787D4D;
-border: 1px solid #267A95
-}
-
-/* choose us  */
-.chooseus-bg{
-background: linear-gradient(to bottom right, #E5F5F7, #E8F7E5);
-}
-.chooseus-border{
-  border: 1px solid #8FDCE4
+  .facilities-position {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -46px;
+  }
 }
